--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -7,21 +7,31 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 	<h:form>
+		<h:messages />
 		<div>
 			<h:outputLabel value="Título" />
-			<h:inputText value="#{adminLivrosBean.livro.titulo}"/>
+			<h:inputText value="#{adminLivrosBean.livro.titulo}" 
+				required="true"/>
 		</div>
 		<div>
 			<h:outputLabel value="Descrição" />
-			<h:inputTextarea rows="4" cols="20" value="#{adminLivrosBean.livro.descricao}"/>
+			<h:inputTextarea rows="4" cols="20" 
+				value="#{adminLivrosBean.livro.descricao}"
+				required="true"/>
 		</div>
 		<div>
 			<h:outputLabel value="Número de Páginas" />
-			<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"/>
+			<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"
+				required="true">
+				<f:validateLongRange minimum="50" />
+			</h:inputText>
 		</div>
 		<div>
 			<h:outputLabel value="Preço" />
-			<h:inputText value="#{adminLivrosBean.livro.preco}"/>
+			<h:inputText value="#{adminLivrosBean.livro.preco}"
+				required="true">
+				<f:validateDoubleRange minimum="20" maximum="200"/>
+			</h:inputText>
 		</div>
 		<div>
 			<h:outputLabel value="Autores" />
