--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -40,9 +40,17 @@
 					converter="javax.faces.Integer" id="autores">
 				<f:selectItems value="#{adminLivrosBean.autores}"
 					var="autor"
-					itemValue="#{autor.id}" itemLabel="#{autor.nome}" />
+					itemValue="#{autor.id}" itemLabel="#{autor.nome}" />	
 			</h:selectManyListbox>
 			<h:message for="autores"/>
+		</div>
+		<div>
+			<h:outputLabel value="Data de Publicação"/>
+			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao.time}"
+				id="dataPublicacao">
+				<f:convertDateTime pattrern="dd/MM/yyyy"/>
+			</h:inputText>
+			<h:message for="dataPublicacao"/>
 		</div>
 		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"/>
 		
