Removendo conversores do forme

--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -46,10 +46,8 @@
 		</div>
 		<div>
 			<h:outputLabel value="Data de Publicação"/>
-			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao.time}"
-				id="dataPublicacao">
-				<f:convertDateTime pattrern="dd/MM/yyyy"/>
-			</h:inputText>
+			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
+				id="dataPublicacao" />
 			<h:message for="dataPublicacao"/>
 		</div>
 		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"/>
