--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -8,64 +8,79 @@
 
 <h:head>
 	<h:outputStylesheet library="css" name="bootstrap.min.css" />
+	<h:outputStylesheet library="css" name="style-admin.css" />
 </h:head>
 
 <h:body>
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	<div class="container">
-	<h:form enctype="multipart/form-data">
-		<div class="form-group">
-			<h:outputLabel value="Título" />
-			<h:inputText value="#{adminLivrosBean.livro.titulo}" 
-				required="true" id="titulo" styleClass="form-control"/>
-			<h:message for="titulo" />
+		<div class="navbar-header">
+			<a class="navbar-brand " href="#">Casa do Código</a>
 		</div>
-		<div class="form-group">
-			<h:outputLabel value="Descrição" />
-			<h:inputTextarea rows="4" cols="20" 
-				value="#{adminLivrosBean.livro.descricao}"
-				required="true" id="descricao" styleClass="form-control"/>
-			<h:message for="descricao"/>
+		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+			<ul class="navbar-nav mr-auto">
+				<li><h:link class="nav-link" value="Lista" outcome="lista"/></li>
+				<li class="active"><a class="nav-link" href="#">Cadastro</a></li>
+			</ul>
 		</div>
-		<div class="form-group">
-			<h:outputLabel value="Número de Páginas" />
-			<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"
-				required="true" id="numeroPaginas" styleClass="form-control">
-			</h:inputText>
-			<h:message for="numeroPaginas"/>
-		</div>
-		<div class="form-group">
-			<h:outputLabel value="Preço" />
-			<h:inputText value="#{adminLivrosBean.livro.preco}"
-				required="true" id="preco" styleClass="form-control">
-			</h:inputText>
-			<h:message for="preco"/>
-		</div>
-		<div class="form-group">
-			<h:outputLabel value="Autores" />
-			<h:selectManyListbox value="#{adminLivrosBean.livro.autores}"
+	</div>
+	</nav>
+
+	<div class="container">
+	<h1>Cadastro de Livros</h1>
+		<h:form enctype="multipart/form-data">
+			<div class="form-group">
+				<h:outputLabel value="Título" />
+				<h:inputText value="#{adminLivrosBean.livro.titulo}" required="true"
+					id="titulo" styleClass="form-control" />
+				<h:message for="titulo" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Descrição" />
+				<h:inputTextarea rows="4" cols="20"
+					value="#{adminLivrosBean.livro.descricao}" required="true"
+					id="descricao" styleClass="form-control" />
+				<h:message for="descricao" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Número de Páginas" />
+				<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"
+					required="true" id="numeroPaginas" styleClass="form-control">
+				</h:inputText>
+				<h:message for="numeroPaginas" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Preço" />
+				<h:inputText value="#{adminLivrosBean.livro.preco}" required="true"
+					id="preco" styleClass="form-control">
+				</h:inputText>
+				<h:message for="preco" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Autores" />
+				<h:selectManyListbox value="#{adminLivrosBean.livro.autores}"
 					converter="autorConverter" id="autores" styleClass="form-control">
-				<f:selectItems value="#{adminLivrosBean.autores}"
-					var="autor"
-					itemValue="#{autor}" itemLabel="#{autor.nome}" />	
-			</h:selectManyListbox>
-			<h:message for="autores"/>
-		</div>
-		<div class="form-group">
-			<h:outputLabel value="Data de Publicação"/>
-			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
-				id="dataPublicacao" styleClass="form-control"	/>
-			<h:message for="dataPublicacao" styleClass="form-control"/>
-		</div>
-		<div class="form-group">
-			<h:outputLabel value="Capa do Livro"/>
-			<h:inputFile value="#{adminLivrosBean.capaLivro}" id="capaLivro" 
-				styleClass="form-control"/>
-			<h:message for="capaLivro" />
-		</div>
-		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" 
-			styleClass="btn btn-primary"/>
-		
-	</h:form>
+					<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
+						itemValue="#{autor}" itemLabel="#{autor.nome}" />
+				</h:selectManyListbox>
+				<h:message for="autores" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Data de Publicação" />
+				<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
+					id="dataPublicacao" styleClass="form-control" />
+				<h:message for="dataPublicacao" styleClass="form-control" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Capa do Livro" />
+				<h:inputFile value="#{adminLivrosBean.capaLivro}" id="capaLivro"
+					styleClass="form-control" />
+				<h:message for="capaLivro" />
+			</div>
+			<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"
+				styleClass="btn btn-primary" />
+
+		</h:form>
 	</div>
 </h:body>
 </html>
