Redirencionando paginas para home

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -169,6 +169,11 @@
 							Web
 						</a>
 					</li>
+					<li class="colecoesDaCDC-colecaoItem">
+						<a href="livros/lista.xhtml" class="colecoesDaCDC-colecaoLink">
+							List
+						</a>
+					</li>
 				
 			</nav>
 			<form role="search" aria-labelledby="rotuloBuscaPrincipal" action="https://www.casadocodigo.com.br/search" method="GET" class="buscaPrincipal">
