--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -14,11 +14,9 @@
 <h:body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	<div class="container">
-		<div class="navbar-header">
-			<a class="navbar-brand " href="#">Casa do Código</a>
-		</div>
 		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 			<ul class="navbar-nav mr-auto">
+				<li><h:link class="nav-link" value="Casa do Código" outcome="/index"/></li>
 				<li><h:link class="nav-link" value="Lista" outcome="lista"/></li>
 				<li class="active"><a class="nav-link" href="#">Cadastro</a></li>
 			</ul>
