--- a/src/main/webapp/detalhe-livro.xhtml
+++ b/src/main/webapp/detalhe-livro.xhtml
@@ -3,10 +3,12 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:xlink="http://www.w3.org/1999/xlink">
+	xmlns:xlink="http://www.w3.org/1999/xlink"
+	xmlns:jsf="http://xmlns.jcp.org/jsf"
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
 <f:metadata>
-    <f:viewParam id="id" name="id" value="#{livroDetalheBean.id}"/>
+    <f:viewParam value="#{livroDetalheBean.id}" name="id" />
     <f:viewAction action="#{livroDetalheBean.carregaDetalhe()}"/>
 </f:metadata>
 
@@ -311,7 +313,7 @@
 </header>
 
 	
-<form action="https://www.casadocodigo.com.br/cart/add" method="POST" class="adicionarAoCarrinho">
+<form method="POST" class="adicionarAoCarrinho" jsf:id="formComprar">
 	<ul class="adicionarAoCarrinho-listaOfertas">
 		<li class="adicionarAoCarrinho-oferta" itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
 			<label class="adicionarAoCarrinho-infosDaOferta" for="product-variant-2055441665">
@@ -332,9 +334,11 @@
 					</span>
 				</p>
 			</label>
-				<button class="adicionarAoCarrinho-botaoComprar" type="submit" name="id" value="2055441665" title="Compre o E-book">
-					Comprar
-				</button>
+			<button class="adicionarAoCarrinho-botaoComprar"
+				jsf:action="#{carrinhoComprasBean.add(livroDetalheBean.id)}"
+				type="submit" title="Compre o E-book">
+				Comprar
+			</button>
 		</li>
 	</ul>
 </form>
@@ -362,6 +366,15 @@
 		</dt>
 		<dd class="infosAdicionaisDoLivro-info-valor" itemprop="numberOfPages">
 			#{livroDetalheBean.livro.numeroPaginas} páginas
+		</dd>
+
+		<dt class="infosAdicionaisDoLivro-info-titulo">
+			Data de Publicação:
+		</dt>
+		<dd class="infosAdicionaisDoLivro-info-valor" itemprop="dataPublicacao">
+			<h:outputText value="#{livroDetalheBean.livro.dataPublicacao.time}" >
+				<f:convertDateTime pattern="dd/MM/yyyy" timeZone="Sao_Paulo/Brazil"/>
+			</h:outputText>
 		</dd>
 		
 		<dt class="infosAdicionaisDoLivro-info-titulo">
