--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -2,7 +2,6 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
@@ -12,50 +11,52 @@
 </h:head>
 
 <h:body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container">
-		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-			<ul class="navbar-nav mr-auto">
-				<li><h:link class="nav-link" value="Casa do Código" outcome="/index"/></li>
-				<li><h:link class="nav-link" value="Lista" outcome="lista"/></li>
-				<li class="active"><a class="nav-link" href="#">Cadastro</a></li>
+		<div class="navbar-header">
+			<h:link value="Casa do código" outcome="/index" styleClass="navbar-brand" />
+		</div>
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><h:link value="Lista" outcome="lista" /></li>
+				<li class="active"><a href="#">Cadastro</a></li>
 			</ul>
 		</div>
+		<!--/.nav-collapse -->
 	</div>
 	</nav>
 
 	<div class="container">
-	<h1>Cadastro de Livros</h1>
+		<h1>Cadastro de livros</h1>
+	
 		<h:form enctype="multipart/form-data">
 			<div class="form-group">
-				<h:outputLabel value="Título" />
+				<h:outputLabel value="Título" for="titulo" />
 				<h:inputText value="#{adminLivrosBean.livro.titulo}" required="true"
 					id="titulo" styleClass="form-control" />
 				<h:message for="titulo" />
 			</div>
 			<div class="form-group">
-				<h:outputLabel value="Descrição" />
-				<h:inputTextarea rows="4" cols="20"
-					value="#{adminLivrosBean.livro.descricao}" required="true"
-					id="descricao" styleClass="form-control" />
+				<h:outputLabel value="Descrição" for="descricao" />
+				<h:inputTextarea rows="4" cols="20" required="true"
+					value="#{adminLivrosBean.livro.descricao}" id="descricao"
+					styleClass="form-control" />
 				<h:message for="descricao" />
 			</div>
 			<div class="form-group">
-				<h:outputLabel value="Número de Páginas" />
+				<h:outputLabel value="Número de Páginas" for="numeroPaginas" />
 				<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"
-					required="true" id="numeroPaginas" styleClass="form-control">
-				</h:inputText>
+					required="true" id="numeroPaginas" styleClass="form-control" />
 				<h:message for="numeroPaginas" />
 			</div>
 			<div class="form-group">
-				<h:outputLabel value="Preço" />
+				<h:outputLabel value="Preço" for="preco" />
 				<h:inputText value="#{adminLivrosBean.livro.preco}" required="true"
-					id="preco" styleClass="form-control">
-				</h:inputText>
+					id="preco" styleClass="form-control" />
 				<h:message for="preco" />
 			</div>
 			<div class="form-group">
-				<h:outputLabel value="Autores" />
+				<h:outputLabel value="Autores" for="autores" />
 				<h:selectManyListbox value="#{adminLivrosBean.livro.autores}"
 					converter="autorConverter" id="autores" styleClass="form-control">
 					<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
@@ -67,18 +68,25 @@
 				<h:outputLabel value="Data de Publicação" />
 				<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
 					id="dataPublicacao" styleClass="form-control" />
-				<h:message for="dataPublicacao" styleClass="form-control" />
+				<h:message for="dataPublicacao" />
 			</div>
 			<div class="form-group">
 				<h:outputLabel value="Capa do Livro" />
 				<h:inputFile value="#{adminLivrosBean.capaLivro}" id="capaLivro"
 					styleClass="form-control" />
-				<h:message for="capaLivro" />
 			</div>
 			<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"
 				styleClass="btn btn-primary" />
-
 		</h:form>
 	</div>
 </h:body>
 </html>
+
+
+
+
+
+
+
+
+
