--- a/src/main/webapp/livros/lista.xhtml
+++ b/src/main/webapp/livros/lista.xhtml
@@ -12,52 +12,60 @@
 </h:head>
 
 <h:body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container">
-		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-			<ul class="navbar-nav mr-auto">
-				<li><h:link class="nav-link" value="Casa do Código" outcome="/index"/></li>
-				<li class="active"><a class="nav-link" href="#">Lista</a></li>
-				<li><h:link value="Cadastro" outcome="form" class="nav-link"/></li>
+		<div class="navbar-header">
+			<h:link value="Casa do código" outcome="/index" styleClass="navbar-brand" />
+		</div>
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Lista</a></li>
+				<li><h:link value="Cadastro" outcome="form" /></li>
 			</ul>
 		</div>
+		<!--/.nav-collapse -->
 	</div>
 	</nav>
-	
+
 	<div class="container">
-	<h1>Lista de Livros</h1>
-	<h:messages />
-	
-	<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}"
-			class="table table-bordered table-striped table table-hover">
-		<h:column>
-			<f:facet name="header">Título</f:facet>
+		<h1>Lista de livros</h1>
+		<h:messages />
+
+		<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}"
+			class="table table-bordered table-striped table-hover">
+			<h:column>
+				<f:facet name="header">Título</f:facet>
 			#{livro.titulo}
 		</h:column>
-		<h:column>
-			<f:facet name="header">Descrição</f:facet>
+			<h:column>
+				<f:facet name="header">Descrição</f:facet>
 			#{livro.descricao}
 		</h:column>
-		<h:column>
-			<f:facet name="header">Páginas</f:facet>
+			<h:column>
+				<f:facet name="header">Páginas</f:facet>
 			#{livro.numeroPaginas}
 		</h:column>
-		<h:column>
-			<f:facet name="header">Preço</f:facet>
+			<h:column>
+				<f:facet name="header">Preço</f:facet>
 			#{livro.preco}
-		</h:column> 
-		<h:column>
-			<f:facet name="header">Autores</f:facet>
-			<ui:repeat value="#{livro.autores}" var="autor" >
+		</h:column>
+			<h:column>
+				<f:facet name="header">Autores</f:facet>
+				<ui:repeat value="#{livro.autores}" var="autor">
 				#{autor.nome},
 			</ui:repeat>
-		</h:column>
-		<h:column>
-			<f:facet name="header">Capa Path</f:facet>
-			<img src="#{request.contextPath}/file/#{livro.capaPath}" 
-			height="10%" alt="#{livro.titulo}"/>
-		</h:column>
-	</h:dataTable>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Capa Path</f:facet>
+				<img src="#{request.contextPath}/file/#{livro.capaPath}"
+					height="30%" alt="#{livro.titulo}" />
+			</h:column>
+		</h:dataTable>
 	</div>
 </h:body>
 </html>
+
+
+
+
+
