--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,7 +3,8 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:o="http://omnifaces.org/ui">
+	xmlns:o="http://omnifaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 	
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
@@ -165,9 +166,10 @@
 							Mobile
 						</a>
 					</li>
+					<c:if test="#{currentUser.hasRole('ADMIN')}" />
 					<li class="colecoesDaCDC-colecaoItem">
-						<a href="https://www.casadocodigo.com.br/collections/livros-de-desenvolvimento-web" class="colecoesDaCDC-colecaoLink">
-							Web
+						<a href="#{request.contextPath}/livros/lista.xhtml" class="colecoesDaCDC-colecaoLink">
+							Administração
 						</a>
 					</li>
 				
