--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -3,32 +3,17 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:head>
-	<h:outputStylesheet library="css" name="bootstrap.min.css" />
-	<h:outputStylesheet library="css" name="style-admin.css" />
-</h:head>
+<ui:composition template="/templates/_admin_template.xhtml">
 
-<h:body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<h:link value="Casa do código" outcome="/index" styleClass="navbar-brand" />
-		</div>
-		<div id="navbar" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li><h:link value="Lista" outcome="lista" /></li>
-				<li class="active"><a href="#">Cadastro</a></li>
-			</ul>
-		</div>
-		<!--/.nav-collapse -->
-	</div>
-	</nav>
+	<ui:param name="cadastro" value="active" />
 
-	<div class="container">
-		<h1>Cadastro de livros</h1>
+	<ui:define name="body">
 	
+		<h1>Cadastro de livros</h1>
+
 		<h:form enctype="multipart/form-data">
 			<div class="form-group">
 				<h:outputLabel value="Título" for="titulo" />
@@ -78,15 +63,8 @@
 			<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"
 				styleClass="btn btn-primary" />
 		</h:form>
-	</div>
-</h:body>
+		
+	</ui:define>
+
+</ui:composition>
 </html>
-
-
-
-
-
-
-
-
-
