--- a/src/main/webapp/livros/lista.xhtml
+++ b/src/main/webapp/livros/lista.xhtml
@@ -6,32 +6,12 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:head>
-	<h:outputStylesheet library="css" name="bootstrap.min.css" />
-	<h:outputStylesheet library="css" name="style-admin.css" />
-</h:head>
+<ui:composition template="/templates/_admin_template.xhtml">
 
-<h:body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<h:link value="Casa do código" outcome="/index" styleClass="navbar-brand" />
-		</div>
-		<div id="navbar" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Lista</a></li>
-				<li><h:link value="Cadastro" outcome="form" /></li>
-			</ul>
-		</div>
-		<!--/.nav-collapse -->
-	</div>
-	</nav>
+	<ui:param name="lista" value="active" />
 
-	<div class="container">
+	<ui:define name="body">
 		<h1>Lista de livros</h1>
-	<div>
-		Bem vindo, #{currentUser.get().email}
-	</div>
 
 		<h:messages />
 
@@ -65,8 +45,8 @@
 					height="30%" alt="#{livro.titulo}" />
 			</h:column>
 		</h:dataTable>
-	</div>
-</h:body>
+	</ui:define>
+</ui:composition>
 </html>
 
 
